--- a/src/app/job-application-list/job-application-list.component.html
+++ b/src/app/job-application-list/job-application-list.component.html
@@ -4,12 +4,12 @@
   	<hr>
   	<div>
 		<mat-form-field class="input-full-width">
-	    	<input [(ngModel)]="filterObj.name" matInput placeholder="Applicant Name">
+	    	<input [(ngModel)]="filterObj.name" (change)="updateFilterObjSessionStorage()" matInput placeholder="Applicant Name">
 	  	</mat-form-field>
   	</div>
   	<div>
 	  	<mat-form-field class="input-full-width">
-	    	<input [(ngModel)]="filterObj.position" matInput placeholder="Position">
+	    	<input [(ngModel)]="filterObj.position" (change)="updateFilterObjSessionStorage()" matInput placeholder="Position">
 	  	</mat-form-field>
   	</div>
   	<hr>
@@ -17,17 +17,17 @@
 			[clear]
 		</button></h4>
   	<mat-form-field class="input-half-width">
-	  <input [(ngModel)]="filterObj.dateFrom" matInput [matDatepicker]="pickerfrom" placeholder="From" disabled>
+	  <input [(ngModel)]="filterObj.dateFrom" (dateInput)="updateFilterObjSessionStorage()" matInput [matDatepicker]="pickerfrom" placeholder="From" disabled>
 	  <mat-datepicker-toggle matSuffix [for]="pickerfrom"></mat-datepicker-toggle>
 	  <mat-datepicker #pickerfrom disabled="false"></mat-datepicker>
 	</mat-form-field>
 	<mat-form-field class="input-half-width">
-	  <input [(ngModel)]="filterObj.dateTo" matInput [matDatepicker]="pickerto" placeholder="To" disabled>
+	  <input [(ngModel)]="filterObj.dateTo" (dateInput)="updateFilterObjSessionStorage()" matInput [matDatepicker]="pickerto" placeholder="To" disabled>
 	  <mat-datepicker-toggle matSuffix [for]="pickerto"></mat-datepicker-toggle>
 	  <mat-datepicker #pickerto disabled="false"></mat-datepicker>
 	</mat-form-field>
 	<mat-form-field class="input-full-width">
-  		<mat-select [(ngModel)]="filterObj.experience" placeholder="Years of Experience (at least)">
+  		<mat-select [(ngModel)]="filterObj.experience" (change)="updateFilterObjSessionStorage()" placeholder="Years of Experience (at least)">
   			<mat-option [value]="null"></mat-option>
 			<mat-option *ngFor="let experience of [0,1,2,3,4,5,6,7,8,9,10]" [value]="experience">
 	      		{{ experience }}
@@ -35,7 +35,7 @@
   		</mat-select>
 	</mat-form-field>
 	<mat-form-field class="input-full-width">
-  		<mat-select [(ngModel)]="filterObj.availability" placeholder="Availability in a week (shifts)">
+  		<mat-select [(ngModel)]="filterObj.availability" (change)="updateFilterObjSessionStorage()" placeholder="Availability in a week (shifts)">
   			<mat-option [value]="null"></mat-option>
 			<mat-option *ngFor="let shifts of [0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20]" [value]="shifts">
 	      		{{ shifts }}
@@ -49,7 +49,7 @@
 			<i class="material-icons">filter_list</i>
 		</button> |&nbsp;&nbsp;&nbsp;
 		<mat-form-field>
-	  		<mat-select [(ngModel)]="filterObj.sort" placeholder="Sort (Least to Greatest)">
+	  		<mat-select [(ngModel)]="filterObj.sort" (change)="updateFilterObjSessionStorage()" placeholder="Sort (Least to Greatest)">
 	  			<mat-option [value]="null"></mat-option>
 				<mat-option *ngFor="let option of sortOptions" [value]="option">
 		      		{{ option }}
