--- a/src/app/job-application/job-application.component.html
+++ b/src/app/job-application/job-application.component.html
@@ -1,10 +1,10 @@
 <mat-card>
 	<mat-card-title class="title-content">
-		<p>Application Id : {{application.id}}</p>
-		<span *ngIf="!isFavApp()" class="title-content-right" (click)="addToFavs()">
+		<p class="app-id">Application Id : {{application.id}}</p>
+		<span class="fav-star" *ngIf="!isFavApp()" class="title-content-right" (click)="addToFavs()">
 			<button mat-icon-button><i class="material-icons">star_border</i></button>
 		</span>
-		<span *ngIf="isFavApp()" class="title-content-right" (click)="removeFromFavs()">
+		<span class="fav-star" *ngIf="isFavApp()" class="title-content-right" (click)="removeFromFavs()">
 			<button mat-icon-button><i class="material-icons">star</i></button>
 		</span>
 	</mat-card-title>
