--- a/src/app/job-application-list/job-application-list.component.css
+++ b/src/app/job-application-list/job-application-list.component.css
@@ -4,3 +4,12 @@
 	margin-right: auto;
 	margin-top: 1rem;
 }
+
+@media (max-width: 700px) {
+	.sort-container {
+		width: 70%;
+		margin-left: auto;
+		margin-right: auto;
+		margin-top: 1rem;
+	}
+}
