--- a/src/styles.css
+++ b/src/styles.css
@@ -43,3 +43,12 @@ mat-card {
 	margin-right: auto;
 	margin-top: 1rem;
 }
+
+@Media (max-width: 700px) {
+	mat-card {
+	width: 90%;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 1rem;
+}
+}
