--- a/src/app/job-application-detail/job-application-detail.component.html
+++ b/src/app/job-application-detail/job-application-detail.component.html
@@ -18,5 +18,6 @@
 			<div>{{question.text}}</div>
 			<div>{{question.answer}}</div>
 		</div>
+		<a [routerLink]="['/applications']"><button mat-raised-button>BACK</button></a>
 	</mat-card-content>
 </mat-card>
